fix: fix upload not working on iphones, fix styles

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,4 +6,7 @@
 
 body {
   font-family: "Montserrat", sans-serif;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
 }
